--- a/styleFinalmalo1.css
+++ b/styleFinalmalo1.css
@@ -75,6 +75,7 @@ body {
     font-size: 160%;
     border-radius: 12px;
     text-decoration: none;
+    transition: 0.3s;
 }
 
 .caminos__boton:hover {
