--- a/stylesQuemar.css
+++ b/stylesQuemar.css
@@ -86,6 +86,9 @@ body {
     color: red;
     border-radius: 20px;
     font-size: 30px;
+    background-color: rgba(0, 0, 0, 0.699);
+    height: 100px;
+    margin: 10px;
 
 }
 
