--- a/styles2a.css
+++ b/styles2a.css
@@ -102,6 +102,16 @@ body {
     margin: 50px auto;
     gap: 30px;
 }
+.acciones__eleccion{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.893);
+    height: 70px;
+    width: 300px;
+    font-size: 25px;
+}
 
 .acciones__btn {
     max-width: 250px;
@@ -121,28 +131,4 @@ body {
     border-color: #d6b87a;
     color: #1a1a1a;
     transform: translateY(-10px);
-}
-
-.eleccion {
-    display: flex;
-    background-color: rgba(0, 0, 0, 0.6);
-    border: 2px solid #d4af37;
-    color: #f8f8f8;
-    font-weight: bold;
-    font-size: 1.15em;
-    cursor: default;
-    text-shadow: 2px 2px 4px #000;
-    pointer-events: none;
-    transform: scale(1.05);
-    box-shadow: 0 0 10px rgba(212, 175, 55, 0.4);
-    align-items: center;
-    height: 50px;
-    padding: 15px 25px;
-    background: rgba(30, 33, 40, 0.9);
-    border: 2px solid #5a5f66;
-    border-radius: 10px;
-    color: #f5f5f5;
-    font-size: 22px;
-    text-align: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
