--- a/styless.css
+++ b/styless.css
@@ -48,7 +48,7 @@ body {
     background-color: rgba(0, 0, 0, 0.829);
     color: rgb(255, 255, 255);
     width: 285px;
-    height: 175px;
+    height: 275px;
     padding: 50px;
     border-radius: 10px;
 }
@@ -66,6 +66,7 @@ body {
     justify-content: center;
     align-items: center;
     padding: 30px 10px 10px 10px;
+    font-size: 20px;
 
 }
 
