--- a/styleBodaroja.css
+++ b/styleBodaroja.css
@@ -15,27 +15,7 @@ body {
 
 .inicio__fondo {
   width: 100%;
-  background-color: rgba(0,0,0,0.7);
-}
-
-.header__inicio {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: linear-gradient(90deg, #111, #333);
-  padding: 20px;
-  gap: 20px;
-}
-
-.header__inicio img {
-  width: 100px;
-  border-radius: 10px;
-}
-
-.header__inicio--titulo {
-  font-size: 2.5rem;
-  letter-spacing: 3px;
-  color: white;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .contenedor {
@@ -108,6 +88,6 @@ body {
 }
 
 .botones__centro:hover {
-  background-color:rgb(161, 15, 15);
+  background-color: rgb(161, 15, 15);
   transform: translateY(-10px);
 }
